# netherite-server

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: bytes.rs  lib.rs  magic.rs  vecs.rs
macros/: Cargo.toml
macros/src/: abs.rs  enum_fields.rs  enum_utils.rs  lib.rs  packet.rs
protocol/: Cargo.toml
protocol/src/: error.rs  lib.rs
protocol/src/chat/: mod.rs
protocol/src/model/: chat.rs  gamemode.rs  mod.rs  pos.rs  score.rs
protocol/src/packet/: disconnect.rs  mod.rs  ser.rs  state.rs
protocol/src/packet/login/: handshake.rs  mod.rs
protocol/src/packet/status/: mod.rs  serverbound.rs
protocol/src/server/: mod.rs  player.rs
protocol/src/types/: mod.rs  var.rs
