[package]
name = "netherite-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
stdto = { version = "0", features = ["serde", "derive", "bytes", "toml", "yaml", "json"] }
serde = "1"
serde_json = "1"
toml = "0"
log = "0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["full"] }
tokio-stream = "0"
thiserror = "1"
futures-sink = "0"
futures = "0"
netherite-common.path = "../common"
derive_more = "0.99.17"
uuid = "1.3.1"
